--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,11 +12,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="0.01"
         android:gravity="center"
 
@@ -26,50 +23,52 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="56dp"
         android:layout_weight="0.06"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_marginLeft="34dp"
-        android:layout_marginStart="34dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginStart="37dp"
         android:layout_alignTop="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3" />
+        android:layout_toEndOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView3"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="21dp"
         android:layout_weight="0.01"
         android:gravity="center"
         android:text="@string/text2"
         android:textAlignment="gravity"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_toEndOf="@+id/textView4" />
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="56dp"
         android:layout_weight="0.01"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
         android:layout_alignTop="@+id/textView"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
 
     <Button
         android:id="@+id/button1"
@@ -78,9 +77,9 @@
         android:layout_weight="0.01"
         android:text="@string/text3"
         android:onClick="showActivity2"
-        android:layout_below="@+id/editText3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp" />
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView4"
@@ -89,32 +88,27 @@
         android:text="@string/textBMI"
         android:textSize="24sp"
         android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView4"
         android:gravity="center"
-        android:textSize="120sp"
-        android:layout_alignParentBottom="true" />
+        android:textSize="120sp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText2"
+        android:layout_height="56dp"
+        android:gravity="center"
+        android:text="m"
         android:layout_alignTop="@+id/editText2"
         android:layout_toEndOf="@+id/editText2"
-        android:layout_toRightOf="@+id/editText2"
-        android:gravity="center"
-        android:text="m" />
+        android:layout_toRightOf="@+id/editText2" />
 
     <TextView
         android:id="@+id/textView5"
